# Pixel

./: .gitignore  CMakeLists.txt  GoogleTestLog.h  LICENSE  README.md  csm.json  deferred.json  framegraph_test.cpp  imgui.json  main.cpp  multiwrite.json  setup.py  simple - Copy.json  simple.json  texture.json
CMake/: CompileGLSL.cmake
Core/: IntrusivePtr.h  ReadFile.h
Engine/: Buffer.h  Camera.cpp  Camera.h  DrawableBinder.cpp  DrawableBinder.h  Event.h  ImguiOverlay.cpp  ImguiOverlay.h  Mesh.h  PixelEngine.cpp  PixelEngine.h  Renderable.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowGLFW.cpp  WindowWin32.cpp
Examples/: CMakeLists.txt  Triangle.cpp
Examples/ComputeRayTracing/: CMakeLists.txt  ComputeRayTracing.json  compute.comp.spv  main.cpp  present.frag  rt.json
Examples/ComputeRayTracing/Shaders/: ComputeRayTracing.json  compute.comp  imgui.json  present.frag
Examples/Deferred/: CMakeLists.txt  compose.frag  compose.frag.spv  deferred.json  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  main.cpp
Examples/ImGUI/: CMakeLists.txt  imgui.json  main.cpp  ui.vert
Examples/ImGUI/Shaders/: imgui.json  ui.vert
Examples/RenderPassEditor/: CMakeLists.txt  EditorNode.cpp  EditorNode.h  EditorView.cpp  EditorView.h  FrameGraphEditorNode.cpp  FrameGraphEditorNode.h  imgui.json  main.cpp
Examples/RenderPassEditor/utilities/: FileDialog.cpp  FileDialog.h
Examples/Texture/: CMakeLists.txt  imgui.json  main.cpp  texture.frag  texture.frag.spv  texture.json  texture.vert  texture.vert.spv
Examples/Triangle/: CMakeLists.txt  imgui.json  main.cpp  triangle.json  triangle.vert.spv
Examples/Triangle/Shaders/: imgui.json  triangle.json  triangle.vert
FrameGraph/: FrameGraph.h  Graph.cpp  Graph.h  GraphNode.cpp  GraphNode.h  GraphNodeJson.h
IO/: GLTFReader.cpp  GLTFReader.h  KTXReader.cpp  KTXReader.h
RHI/: AuxiliaryExecutor.h  Buffer.h  BufferArray.cpp  BufferArray.h  ConstantBuffer.h  Executor.h  Formats.h  Memory.h  MutableBuffer.cpp  MutableBuffer.h  Pipeline.cpp  Pipeline.h  PipelineStates.h  RHIRuntime.h  RenderGroup.cpp  RenderGroup.h  RenderGroupExecutor.cpp  RenderGroupExecutor.h  RenderPass.cpp  RenderPass.h  RenderPassExecutor.h  ResourceBindingState.h  ResourceHandle.h  RuntimeEntry.cpp  RuntimeEntry.h  Sampler.h  SwapChain.h  Texture.h  TextureFormat.h  UniformBinding.h
RHI/VulkanRuntime/: AuxiliaryExecutor.cpp  AuxiliaryExecutor.h  Buffer.cpp  Buffer.h  ComputePass.cpp  ComputePass.h  ComputePipeline.cpp  ComputePipeline.h  Context.cpp  Context.h  ContextBuilder.cpp  ContextBuilder.h  DescriptorSet.cpp  DescriptorSet.h  GraphicPass.cpp  GraphicPass.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.h  Instance.h  Memory.h  Pass.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Presenter.h  RenderGroup.cpp  RenderGroup.h  RenderGroupExecutor.cpp  RenderGroupExecutor.h  RenderPass.cpp  RenderPass.h  RenderPassExecutor.cpp  RenderPassExecutor.h  ResourceBindingState.cpp  ResourceBindingState.h  ResourceUpdater.cpp  ResourceUpdater.h  Runtime.cpp  (+16 more)
Test/: CMakeLists.txt
Test/FrameGraph/: CMakeLists.txt  FrameGraphTest.cpp  MultipleNodeReference.json  mutipleRenderPass.json  singleRenderPass.json
